# thirtyfour-bp

./: Cargo.toml  README.md
src/: instance.json  launched_instances.rs  main.rs
src/pages/: dashboard.rs  ec2_details_page.rs  filters.rs  inventory.rs  login.rs  mod.rs  threats_page.rs  vul_page.rs
src/remediate/: message_generators.rs  mod.rs  remediate_windows.rs
tests/e2e/: main.rs  world.rs
tests/e2e/features/: test.feature  thirtyfour.feature
tests/e2e/pages/: dashboard.rs  ec2_details_page.rs  filters.rs  inventory.rs  login.rs  mod.rs  threats_page.rs  vul_page.rs
