[package]
name = "thirtyfour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1.21", features = ["sync", "parking_lot"] }
regex = "1.5"
serde_yaml = "0.9.14"
chrono = "0.4"