[package]
name = "thirtyfour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "thirtyfour"
harness = false
path = "tests/e2e/main.rs"

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1.21", features = ["sync", "parking_lot"] }
regex = "1.5"
serde_yaml = "0.9.14"
chrono = "0.4"
cucumber = { version = "0.13.0", features = ["output-junit"] }
futures = "0.3.1"
async-trait = "0.1.42"

